fix: Treeview menu loading perf issue- EXO-73169 - Meeds-io/MIPs#129 (#1124)
fix: Treeview menu loading perf issue- EXO-73169 - Meeds-io/MIPs#129